# ProgramacionII

EntradaSalida_Practica/: CMakeLists.txt  README.md  main.cpp
Heap_Stack_Practica/: CMakeLists.txt  Persona.cpp  Persona.h  main.cpp
Herencia_Practica/: Believix.cpp  Believix.h  CMakeLists.txt  Charmix.cpp  Charmix.h  Enchantix.cpp  Enchantix.h  Espiritu.cpp  Espiritu.h  Harmonix.cpp  Harmonix.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  Sephiroth.cpp  Sephiroth.h  VestidoAstral.cpp  VestidoAstral.h  main.cpp
Polimorfismo/: Animal.cpp  Animal.h  CMakeLists.txt  Cerdo.cpp  Cerdo.h  Elefante.cpp  Elefante.h  Gato.cpp  Gato.h  Leon.cpp  Leon.h  Mono.cpp  Mono.h  Oso.cpp  Oso.h  Perro.cpp  Perro.h  main.cpp
Proyecto3erParcial/: BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  Curar.cpp  Curar.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Personaje.cpp  Personaje.h  main.cpp
Referencias_Practica/: CMakeLists.txt  main.cpp
Repaso_POO/: Arma.cpp  Arma.h  BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  ConfiguracionesJuego.cpp  ConfiguracionesJuego.h  Curar.cpp  Curar.h  Enemigo.cpp  Enemigo.h  Goblin.cpp  Goblin.h  Guerrero.cpp  Guerrero.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Mago.cpp  Mago.h  Orco.cpp  Orco.h  Personaje.cpp  Personaje.h  Pocion.cpp  Pocion.h  main.cpp
Sobrecarga_Practica/: BoolCell.cpp  BoolCell.h  CMakeLists.txt  CharCell.cpp  CharCell.h  Coche.cpp  Coche.h  DoubleCell.cpp  DoubleCell.h  FloatCell.cpp  FloatCell.h  IntCell.cpp  IntCell.h  main.cpp
